tests-integration/tests/snapshots/test__preambles__check_before.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "outcome": "add",
      "path": "bom.cs"
    },
    {
      "outcome": "add",
      "path": "document.xml"
    },
    {
      "outcome": "add",
      "path": "document.yaml"
    },
    {
      "outcome": "add",
      "path": "script.py"
    },
    {
      "outcome": "add",
      "path": "windows.rs"
    }
  ]
}
