tests-integration/tests/snapshots/test__preambles__format.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "bom.cs",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "document.xml",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "document.yaml",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "script.py",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "windows.rs",
      "status": "missing"
    }
  ]
}
