tests-integration/tests/snapshots/test__preambles__format_idempotent.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "bom.cs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "document.xml",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "script.py",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "windows.rs",
      "status": "clean"
    }
  ]
}
