tests-integration/tests/snapshots/test__preambles__tree_before.snap
---
source: tests-integration/tests/test.rs
expression: tree_snapshot(root)
---
=== bom.cs ===
\u{feff}public class Example {}␊
=== document.xml ===
<?xml version="1.0" encoding="UTF-8"?>␊
␊
<project />␊
=== document.yaml ===
%YAML 1.2␊
%TAG !example! tag:example.com,2026:␊
---␊
value: !example!value content␊
=== licenserc.toml ===
[header]␊
text = "Copyright 2026 Acme Labs"␊
␊
[files]␊
excludes = ["licenserc.toml"]␊
includes = ["**/*.cs", "**/*.py", "**/*.rs", "**/*.xml", "**/*.yaml"]␊
=== script.py ===
#!/usr/bin/env python3␊
# -*- coding: utf-8 -*-␊
␊
print("hello")␊
=== windows.rs ===
fn main() {}␍␊
